tests/miniJava/neg/004416_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] extends ( ) { return 0 ; } }
